# tech-trend-stat

./: .env.copy  .gitignore  LICENSE  README.md  pyproject.toml
database/: __init__.py  client.py  collections.py  models.py  templates.py
techtrendanalysis/: analysis.ipynb  tech_completions.json  wrangler.py
techtrendanalysis/stopwords/: common-words.json  stopwords.json
techtrendscrape/: crawler.py  middlewares.py  pipelines.py  settings.py
techtrendscrape/spiders/: djinni.py
tests/: conftest.py  test_crawl_process.py
tests/database/: test_client.py  test_collections.py
tests/techtrendanalysis/: test_vacancies.csv  test_wrangler.py
