[project]
name = "tech-trend-stat"
version = "0.1.0"
description = "Analyzer of technology statistics based on job descriptions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "pymongo>=4.13.0",
    "scrapy>=2.13.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
